fixed incorrect observation response schema
