# swagger.yaml
@@ -17,6 +17,8 @@ securityDefinitions:
     name: apiKey
 security:
   - APIKeyQueryParam: []
+produces:
+  - application/json
 paths:
   /observations/current:
     get:
@@ -24,8 +26,6 @@ paths:
         - "PWS Observations"
       description: "Personal Weather Stations (PWS) Current Conditions returns the current conditions observations for the current record.Current record is the last record reported within 60 minutes. If the station has not reported a current conditions in the past 60 minutes, the response will not return an expired observation record (older than 60 minutes); a 'Data Expired' message will be returned instead."
       operationId: "observationsCurrent"
-      produces:
-        - "application/json"
       parameters:
         - name: "stationId"
           in: "query"
@@ -49,13 +49,17 @@ paths:
           required: true
           type: "string"
           enum: [json]
+          default: json
       responses:
         200:
           description: "successful operation"
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/observations"
+            type: "object"
+            properties:
+              observations:
+                type: "array"
+                items:
+                  $ref: "#/definitions/observations"
         400:
           description: "Invalid status value"
         401:
@@ -66,8 +70,6 @@ paths:
         - "PWS Observations"
       description: "Personal Weather Station (PWS) Rapid Historical Observations returns the daily observations records in rapid frequency as frequent as every 5 minutes. Actual frequency of reports ranges and is dependent on how frequently an individual Personal Weather Station (PWS) reports data."
       operationId: "observationsAllOneDay"
-      produces:
-        - "application/json"
       parameters:
         - name: "stationId"
           in: "query"
@@ -91,12 +93,16 @@ paths:
           required: true
           type: "string"
           enum: [json]
+          default: json
       responses:
         200:
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/observations"
+            type: "object"
+            properties:
+              observations:
+                type: "array"
+                items:
+                  $ref: "#/definitions/observations"
           description: "successful operation"
         400:
           description: "Invalid status value"
@@ -190,3 +196,4 @@ definitions:
         type: "integer"
       windSpeed:
         type: "integer"
+  
